<resources>
    <string name="app_name">ManageMyTeam</string>
    <string name="app_name_separated">Manage My Team</string>

    <!-- General -->
    <string name="accept">Aceptar</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="date_time_format">dd/MM/yyyy HH:mm</string>
    <string name="empty_results">No se han encontrado resultados</string>
    <string name="select_location">Seleccione una localización</string>
    <string name="login_enter">Entrar</string>

    <!-- Navigation -->
    <string name="navigation_event__uuid__argument">event_uuid_argument</string>

    <!-- Bottom Menu -->
    <string name="events">Eventos</string>
    <string name="menu">Menú</string>
    <string name="chat">Chat</string>
    <string name="profile">Perfil</string>

    <!-- Events -->
    <string name="event_type_match">Partido</string>
    <string name="event_type_training">Entrenamiento</string>
    <string name="event_type_other">Otro</string>
    <string name="create_event_title">Nuevo evento</string>
    <string name="create_event_event_title">Título *</string>
    <string name="create_event_event_date">Fecha y hora *</string>
    <string name="create_event_event_location">Localización</string>
    <string name="create_event_event_description">Descripción</string>
    <string name="create_event_event_assistants">Asistentes</string>
    <string name="create_event_event_type">Tipo de evento *</string>
    <string name="create_event_event_type_hint">Partido, entrenamiento u otro</string>
    <string name="create_event_date_format">%02d/%02d/%04d %02d:%02d</string>
    <string name="create_event_error_title">Debe introducir un título\n</string>
    <string name="create_event_error_date">La fecha no puede ser nula\n</string>
    <string name="create_event_error_event_type">Debe seleccionar un tipo de evento\n</string>
    <string name="create_event_select_location">Pulse para seleccionar la localización del evento</string>
    <string name="create_event_success">Evento creado correctamente</string>
    <string name="create_event_select_location_error">Debe seleccionar una localización</string>
    <string name="create_event_select_call">Modifique la convocatoria</string>
    <string name="event_detail_announcement">Convocatoria</string>
    <string name="event_detail_location">Ver localización</string>
    <string name="create_event_create_call">Crear convocatoria</string>
    <string name="past_events">Eventos pasados</string>


    <!-- User -->
    <string name="user">Usuario</string>
    <string name="user_email">Correo electrónico *</string>
    <string name="user_password">Contraseña *</string>
    <string name="user_confirm_password">Confirmar contraseña *</string>
    <string name="user_name">Nombre *</string>
    <string name="user_surname">Apellidos *</string>
    <string name="user_phone">Teléfono *</string>
    <string name="user_age">Edad</string>
    <string name="user_dorsal">Dorsal</string>
    <string name="user_edit">Editar</string>
    <string name="edit_user_user_name">Nombre</string>
    <string name="edit_user_user_surname">Apellidos</string>
    <string name="edit_user_user_mail">Email</string>
    <string name="edit_user_user_phone_number">Número de teléfono</string>
    <string name="edit_user_user_age">Edad</string>
    <string name="edit_user_user_dorsal">Dorsal</string>
    <string name="edit_user_title">Editar datos del usuario</string>
    <string name="user_created_successfully">Solicitud de registro enviada con éxito</string>
    <string name="checkbox_error">Debes aceptar los términos y condiciones</string>
    <string name="login_email">Correo electrónico</string>
    <string name="login_password">Contraseña</string>
    <string name="login_message_registration">¿Aún no has solicitado acceso?</string>
    <string name="login_message_registration_here">Regístrate aquí</string>
    <string name="registration_player_title">Registro de jugador</string>
    <string name="registration_error_invalid_email">Introduzca un correo electrónico válido</string>
    <string name="registration_error_invalid_password">Las contraseñas introducidas no coinciden</string>
    <string name="registration_error_invalid_phone">Introduzca un teléfono válido</string>
    <string name="registration_error_empty_fields">Debe rellenar todos los campos</string>
    <string name="registration_information">Este formulario enviará una solicitud de registro en la aplicación. Si usted no pertenece al club esta solicitud se rechazará.</string>
    <string name="update_user_fields_not_filled">Debe rellenar los campos marcados con (*)</string>
    <string name="edit_user_question">¿Qué te gustaría modificar?</string>
    <string name="edit_user_personal_data">Datos personales</string>
    <string name="edit_user_password">Cambiar contraseña</string>
    <string name="edit_user_email">Cambiar email</string>
    <string name="update_user_success">Actualización realizada con éxito</string>
    <string name="edit_password_old_password">Contraseña actual *</string>
    <string name="edit_password_new">Nueva contraseña *</string>
    <string name="edit_email_new">Nuevo correo electrónico *</string>
    <string name="edit_user_wrong_password">Comprueba que tu contraseña actual es correcta</string>
    <string name="user_profile">Perfil de usuario</string>
    <string name="user_recover_password">Recuperar contraseña</string>
    <string name="user_recover_password_information">Le enviaremos un correo electrónico para que restaure su contraseña.</string>

    <!-- Club module -->
    <string name="club_stats">Estadísticas</string>
    <string name="club">Club</string>
    <string name="club_edit">Editar</string>
    <string name="edit_club_club_shield">Escudo</string>
    <string name="edit_club_club_name">Nombre</string>
    <string name="edit_club_club_date_fundation">Fecha de fundación</string>
    <string name="edit_club_club_president">Presidente</string>
    <string name="edit_club_club_coach">Entrenador</string>
    <string name="edit_club_club_location">Ubicación</string>
    <string name="edit_club_club_mail">Email</string>
    <string name="edit_club_club_phone_number">Número de teléfono</string>
    <string name="edit_club_club_web">Página web</string>
    <string name="edit_club_select_shield">Pulse para subir archivo y editar el escudo</string>
    <string name="edit_club_success">Datos del club editados correctamente</string>
    <string name="edit_club_title">Editar datos del club</string>
    <string name="edit_club_error_name">Debe introducir un nombre\n</string>
    <string name="edit_club_error_date_fundation">Debe introducir una fecha\n</string>
    <string name="edit_club_error_location">Debe introducir una dirección\n</string>
    <string name="edit_club_error_president">Debe introducir el nombre del presidente\n</string>
    <string name="edit_club_error_coach">Debe introducir el nombre del entrenador\n</string>
    <string name="edit_club_error_phone_number">Debe introducir un número de teléfono válido\n</string>
    <string name="edit_club_error_mail">Debe introducir un email válido\n</string>
    <string name="edit_club_error_web">Debe introducir una dirección web válida\n</string>
    <string name="edit_club_date_format">%02d/%02d/%04d</string>

    <!-- Others -->
    <string name="administration_accept_players">Solicitudes de jugadores</string>
    <string name="administration_create_coach">Crear entrenador</string>
    <string name="administration_playpal_config">Configuración de PayPal</string>
    <string name="administration_unable_user">Desactivar usuarios</string>
    <string name="administration_unable_user_success">Usuarios actualizados correctamente</string>
    <string name="create_payment_send">Enviar</string>
    <string name="payment_empty">Aún no has realizado ningún pago</string>
    <string name="request_empty">¡Genial! No te quedan más solicitudes que atender</string>
    <string name="default_notification_channel_id" translatable="false">manage_my_team</string>
    <string name="administration_menu">Menú del administrador</string>
    <string name="create_coach_success">Entrenador creado con éxito</string>
    <string name="create_coach_title">Crear entrenador</string>
    <string name="create_coach_information">El email introducido lo usará el entrenador para su acceso. Deberá proporcionarle la contraseña introducida y en su primer inicio de sesión la cambiará por una propia.</string>
    <string name="activity_main_event">Eventos</string>


    <!-- Terms and Conditions -->
    <string name="terms_and_conditions_title">Términos y condiciones de uso</string>
    <string name="terms_and_conditions_description">
        <![CDATA[

     <p>Esta aplicación es propiedad y está operada por el equipo Manage My Team. Estos Términos establecen los términos y condiciones bajo los cuales puede usar nuestra aplicación y servicios ofrecidos por nosotros. Esta aplicación ofrece a los visitantes un servicio de gestión de clubes de fútbol. Al acceder o usar la aplicación de nuestro servicio, usted aprueba que haya leído, entendido y aceptado estar sujeto a estos Términos: </p>

<p>•	Para usar nuestra aplicación debe poseer la autoridad legal, el derecho y la libertad para participar en estos Términos como un acuerdo vinculante. No tiene permitido utilizar esta aplicación si hacerlo está prohibido en tu país o en virtud de cualquier ley o regulación aplicable a tu caso.</p>
<p>•	Estos términos y condiciones son aplicables dentro de todo el territorio europeo.</p>
<p>•	Recopilaremos datos personales tales como el nombre, los apellidos, el correo electrónico, el número de teléfono y la edad. Estos datos serán utilizados únicamente para facilitar el reconocimiento por parte de otros miembros de la aplicación de su identidad. Usted podrá editar sus datos personales cuando desee.</p>
<p>•	Puede cesar el uso de la aplicación y solicitar cancelar su cuenta y / o cualquier servicio en cualquier momento, de tal forma que todos sus datos serán eliminados de la aplicación de forma permanente.</p>
<p>•	En la máxima medida permitida por la ley aplicable, en ningún caso el equipo de Manage My Team será responsable por daños indirectos, punitivos, incidentales, especiales, consecuentes o ejemplares, incluidos, entre otros, daños por pérdida de beneficios, buena voluntad, uso, datos u otras pérdidas intangibles, que surjan de o estén relacionadas con el uso o la imposibilidad de utilizar el servicio. </p>
<p>•	En la máxima medida permitida por la ley aplicable, Manage My Team no asume responsabilidad alguna por (i) errores, errores o inexactitudes de contenido; (ii) lesiones personales o daños a la propiedad, de cualquier naturaleza que sean, como resultado de su acceso o uso de nuestro producto; y (iii) cualquier acceso no autorizado o uso de nuestros servidores seguros y / o toda la información personal almacenada en los mismos. </p>

        ]]>
    </string>

    <string name="terms_and_conditions_checkbox_text">Términos y condiciones *</string>

    <!--My Team -->

    <string name="my_team_title">Plantilla</string>

    <!-- Calls -->

    <string name="calls">Mis convocatorias</string>
    <string name="my_calls_pending">Pendientes</string>
    <string name="my_calls_accepted">Aceptadas</string>
    <string name="my_calls_rejected">Rechazadas</string>
    <string name="my_calls_success">Tu respuesta se envió con éxito</string>
    <string name="dialog_reject_reason_title">Escriba la razón por la que rechaza la convocatoria</string>
    <string name="dialog_reject_reason_error">Debe rellenar la razón obligatoriamente</string>

</resources>
