<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/size_sixteen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <es.us.managemyteam.ui.view.input.CommonEditableTextView
            android:id="@+id/create_event__edit_text__title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_twentyfour"
            app:input_header="@string/create_event_event_title"
            app:input_type="text" />

        <es.us.managemyteam.ui.view.input.CommonEditableTextView
            android:id="@+id/create_event__edit_text__date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_twentyfour"
            app:input_header="@string/create_event_event_date"
            app:input_hint="dd/MM/yyyy HH:mm"
            app:input_type="none" />

        <es.us.managemyteam.ui.view.input.CommonEditableTextView
            android:id="@+id/create_event__edit_text__event_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_twentyfour"
            app:input_header="@string/create_event_event_type"
            app:input_type="none" />

        <es.us.managemyteam.ui.view.input.CommonEditableTextView
            android:id="@+id/create_event__edit_text__description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_twentyfour"
            app:input_header="@string/create_event_event_description"
            app:input_height="@dimen/size_onehundredandtwenty"
            app:input_type="multi_line" />

        <es.us.managemyteam.ui.view.loading_button.CommonLoadingButtonView
            android:id="@+id/create_event__btn__save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_thirty"
            app:btn_background_color="@color/primary"
            app:btn_has_radius="true"
            app:btn_text="@string/save"
            app:btn_text_color="@color/white" />

    </LinearLayout>


</ScrollView>