<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/size_sixteen">

    <es.us.managemyteam.ui.view.input.EditableTextView
        android:id="@+id/edit_password__edit_text_confirm_old_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_sixteen"
        app:input_header="@string/edit_password_old_password"
        app:input_ime="next"
        app:input_type="password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <es.us.managemyteam.ui.view.input.EditableTextView
        android:id="@+id/edit_password__edit_text_new_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_twenty"
        app:input_header="@string/edit_password_new"
        app:input_ime="next"
        app:input_type="password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_password__edit_text_confirm_old_password" />

    <es.us.managemyteam.ui.view.input.EditableTextView
        android:id="@+id/edit_password__edit_text_confirm_new_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_sixteen"
        app:input_header="@string/user_confirm_password"
        app:input_ime="done"
        app:input_type="password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_password__edit_text_new_password" />

    <es.us.managemyteam.ui.view.loading_button.LoadingButtonView
        android:id="@+id/edit_password__btn__send_request"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_twentyfour"
        app:btn_background_color="@color/primaryDark"
        app:btn_has_radius="true"
        app:btn_text="@string/accept"
        app:btn_text_color="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>